implement hierarchical permission groups and master server controls
This update overhauls the configuration and permission systems to allow for more granular control over VeinMining features based on player ranks and server-wide settings